@@ -1,3 +1,7 @@
+1994-06-17  dickey@clark.net
+
+	* src/realpath/realpath.c: RCS_BASE
+
 1994-06-07  dickey@clark.net
 
 	* src/newpath/newpath.c:
